# docs/swagger.json
@@ -373,6 +373,60 @@
                 }
             }
         },
+        "/wn/api/v1/dashboard": {
+            "get": {
+                "description": "Получить дашборд пермишенов",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "permissions"
+                ],
+                "summary": "getDashboard",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Request id identity",
+                        "name": "X-Request-Id",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "auth token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/wn_pkg_response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/wn_internal_domain_dto.PermissionsDashbord"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "possible codes: invalid_X-Request-Id",
+                        "schema": {
+                            "$ref": "#/definitions/wn_pkg_response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/wn/api/v1/file/upload": {
             "post": {
                 "description": "загрузить файл",
@@ -1831,6 +1885,46 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "wn_internal_domain_dto.Permission": {
+            "type": "object",
+            "properties": {
+                "canEdit": {
+                    "type": "boolean"
+                },
+                "canRead": {
+                    "type": "boolean"
+                },
+                "canWrite": {
+                    "type": "boolean"
+                },
+                "fromUserId": {
+                    "type": "string"
+                },
+                "kind": {
+                    "$ref": "#/definitions/wn_internal_domain_enum.PermissionsKind"
+                },
+                "targetId": {
+                    "type": "string"
+                }
+            }
+        },
+        "wn_internal_domain_dto.PermissionsDashbord": {
+            "type": "object",
+            "properties": {
+                "recivied": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/wn_internal_domain_dto.Permission"
+                    }
+                },
+                "shared": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/wn_internal_domain_dto.Permission"
+                    }
                 }
             }
         },
