# internal/endpoint/controller/http/api/v1/permissions/controller.go
@@ -17,6 +17,7 @@ import (
 type permissionsService interface {
 	GeneratePermissionsLink(ctx context.Context, userId uuid.UUID, req *dto.GeneratePermissionLinkRequest) (*dto.GeneratePermissionsLinkResponse, error)
 	ApplyPermissionsLink(ctx context.Context, userId uuid.UUID, req *dto.ApplyPermissionsRequest) error
+	GetPermissionsDashboard(ctx context.Context, userId uuid.UUID) (*dto.PermissionsDashbord, error)
 }
 
 type Controller struct {
@@ -40,6 +41,7 @@ func (h *Controller) Init(api, authApi *gin.RouterGroup) {
 	{
 		permissionsAuth.POST("/links/generate", h.generateLink)
 		permissionsAuth.POST("/links/apply", h.applyLink)
+		permissionsAuth.GET("/dashboard", h.getDashboard)
 	}
 }
 
@@ -88,7 +90,7 @@ func (h *Controller) generateLink(c *gin.Context) {
 // @Success 200 {object} response.Response{}
 // @Failure 400 {object} response.Response{} "possible codes: invalid_token, invalid_authorization_header"
 // @Failure 400 {object} response.Response{} "possible codes: bind_body, invalid_X-Request-Id"
-// @Failure 422 {object} response.Response{} "possible codes: already_exists"
+// @Failure 422 {object} response.Response{} "possible codes: already_exists, cant_apply"
 // @Router /wn/api/v1/links/apply [post]
 func (h *Controller) applyLink(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -111,4 +113,32 @@ func (h *Controller) applyLink(c *gin.Context) {
 	}
 
 	c.AbortWithStatusJSON(h.builder.BuildSuccessResponseBody(ctx, nil))
+}
+
+// @Summary getDashboard
+// @Description Получить дашборд пермишенов
+// @Tags permissions
+// @Produce json
+// @Param X-Request-Id header string true "Request id identity"
+// @Param Authorization header string true "auth token"
+// @Success 200 {object} response.Response{data=dto.PermissionsDashbord}
+// @Failure 400 {object} response.Response{} "possible codes: invalid_token, invalid_authorization_header"
+// @Failure 400 {object} response.Response{} "possible codes: invalid_X-Request-Id"
+// @Router /wn/api/v1/dashboard [get]
+func (h *Controller) getDashboard(c *gin.Context) {
+	ctx := c.Request.Context()
+
+	userId, err := util.GetUserId(ctx)
+	if err != nil {
+		_ = c.Error(apperrors.InvalidAuthorizationHeader)
+		return
+	}
+
+	dashboard, err := h.permissionsService.GetPermissionsDashboard(ctx, userId)
+	if err != nil {
+		_ = c.Error(err)
+		return
+	}
+
+	c.AbortWithStatusJSON(h.builder.BuildSuccessResponseBody(ctx, dashboard))
 }
